fixed card styling such that the delete button no longer wraps for cards with long titles

--- a/front-end/src/styles/App.css
+++ b/front-end/src/styles/App.css
@@ -3,6 +3,7 @@ body {
   text-align: center;
   color: black;
   margin:0;   
+  min-width: 200px;
 }
 
 #navbar{
